# to-markdown

./: .gitignore  README.md  convert_to_markdown.cmd  convert_to_markdown_silent.pyw  install_context_menu.reg  pyproject.toml  uninstall_context_menu.reg
src/to_markdown/: __init__.py  __main__.py  cli.py  gui.py
test/: chip I5.docx
