[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "to-markdown"
version = "0.1.0"
description = "Convert documents and other files to Markdown using MarkItDown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown[docx,pdf,xlsx,pptx,xls,images]>=0.1.3",
]

[project.scripts]
to-markdown = "to_markdown.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
